<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.rincewind</groupId>
	<artifactId>interfaceapi</artifactId>
	<version>3.0.0</version>

	<properties>
		<finalName>AerionBearTrap</finalName>

		<spigot.version>1.12.1</spigot.version>
		<serverapi.version>1.28.4</serverapi.version>
		<dicefurniture.version>3.2.0.2</dicefurniture.version>
		<furniturelib.version>1.9.2.9</furniturelib.version>

		<jdk.version>9</jdk.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>${jdk.version}</maven.compiler.source>
		<maven.compiler.target>${jdk.version}</maven.compiler.target>
	</properties>

	<repositories>
		<repository>
			<id>aerion-group</id>
			<url>http://dev.thejourneyofaerion.net:8081/repository/aerion-group/</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>aerion</id>
			<name>Aerion Internal Repository</name>
			<url>http://dev.thejourneyofaerion.net:8081/repository/aerion</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-aerion</artifactId>
			<version>1.12.2</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<outputDirectory>${output}</outputDirectory>
					<finalName>InterfaceAPI-${project.version}</finalName>
				</configuration>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>
</project>